--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,26 @@
                 </configuration>
 
             </plugin>
+            <plugin>
+                <groupId>org.simplericity.jettyconsole</groupId>
+                <artifactId>jetty-console-maven-plugin</artifactId>
+                <version>1.47</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>createconsole</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <additionalDependencies>
+                                <additionalDependency>
+                                    <artifactId>jetty-console-jsp-plugin</artifactId>
+                                </additionalDependency>
+                            </additionalDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
